--- a/docs/src/components/FeedbackBlock/styles.module.scss
+++ b/docs/src/components/FeedbackBlock/styles.module.scss
@@ -23,6 +23,7 @@
   &__question {
     font-size: 16px;
     line-height: 24px;
+    font-weight: 500;
     margin: 0;
     font-family: $header-font;
     @media (max-width: 950px) {
